--- a/cheats.html
+++ b/cheats.html
@@ -8,9 +8,9 @@
     <div class="Title">
       <h1>Hudware - Mods</h1>
     </div>
-    <a href="../developer.html">
+    <a href="developer.html">
       <div class="Description">
-        <img src="../gitdev.png" class="iconDesc icon">
+        <img src="gitdev.png" class="iconDesc icon">
         <div class="iconDesc sectionTitle">
           <h3>Developer</h3>
         </div>
@@ -21,7 +21,7 @@
     </div>
     <a href="injector.html">
       <div class="Description">
-        <img src="../Tweaks.png" class="iconDesc icon">
+        <img src="Tweaks.png" class="iconDesc icon">
         <div class="iconDesc sectionTitle">
           <h3>Standoff2 Injector 0.19.1</h3>
         </div>
