--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
     </a>
     <div class="Title">
-      <h1>App List</h1>
+      <h1>Apps List</h1>
     </div>
     <a href="cheats.html">
       <div class="Description">
